# Research_Track2

./: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  conf.py  dr12robot_roscontroll.ttt  jupyros.ipynb  main.ipynb  my_mapping.yaml  package.xml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  genindex.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  md__r_e_a_d_m_e.html  menudata.js  namespacego__to__point.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceuser__interface.html  objects.inv  pages.html  position__service_8cpp.html  py-modindex.html  search.html  searchindex.js  state__machine_8cpp.html  state__machine_8cpp__incl.md5
_build/html/_modules/: index.html
_build/html/_modules/scripts/: go_to_point.html  (+1 more)
_build/html/_sources/: index.rst.txt
_build/html/search/: all_1.js  all_3.js  all_4.js  all_8.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  namespaces_0.js  namespaces_1.js  pages_0.js  searchdata.js  variables_0.js
_build/latex/: files.tex  md__r_e_a_d_m_e.tex  namespacego__to__point.tex  namespaceuser__interface.tex  position__service_8cpp.tex  position__service_8cpp__incl.md5  refman.tex  state__machine_8cpp.tex
_build/xml/: _c_make_lists_8txt.xml  _r_e_a_d_m_e_8md.xml  conf_8py.xml  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.xml  go__to__point_8py.xml  index.xml  md__r_e_a_d_m_e.xml  namespaceconf.xml  namespacego__to__point.xml  namespaceuser__interface.xml  position__service_8cpp.xml  state__machine_8cpp.xml  user__interface_8py.xml
action/: Rc.action
html/: dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  globals_vars.html  go__to__point_8py.html  graph_legend.html  index.html  md__r_e_a_d_m_e.html  namespacego__to__point.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceuser__interface.html  pages.html  position__service_8cpp.html  position__service_8cpp__incl.map  position__service_8cpp__incl.md5  state__machine_8cpp.html  state__machine_8cpp__incl.map  user__interface_8py.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
latex/: files.tex  go__to__point_8py.tex  md__r_e_a_d_m_e.tex  namespacego__to__point.tex  namespaces.tex  namespaceuser__interface.tex  position__service_8cpp.tex  refman.tex  state__machine_8cpp.tex  state__machine_8cpp__incl.md5  user__interface_8py.tex
launch/: ros_ros2_bridge.launch.txt  ros_ros2_bridge_controll.py  sim.launch
scripts/: go_to_point.py  user_interface.py
src/: position_service.cpp  state_machine.cpp
