<?xml version="1.0"?>
<package format="2">
  <name>rt2_assignment1</name>
  <version>0.0.0</version>
  <description>The rt2_assignment1 package</description>
 
  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>rclcpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="my_mapping.yaml"/>
  </export>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>